--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.username=sellerapp-user-2
 spring.datasource.password=abcd1234
 spring.datasource.platform=mysql
 spring.jpa.hibernate.ddl-auto=create-drop
+
+jwt.secret = secret
