--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,14 @@
 #==== connect to mysql ======#
-spring.datasource.url=jdbc:mysql://localhost:3306/sellerapp-db-2?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username=sellerapp-user-2
+spring.datasource.url=jdbc:mysql://localhost:3306/test?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username=test
 spring.datasource.password=abcd1234
 spring.datasource.platform=mysql
-spring.jpa.hibernate.ddl-auto=create-drop
-
+ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 jwt.secret = secret
+
+
+spring.liquibase.change-log=classpath:/db/changelog/changelog-master.xml
+logging.level.liquibase = INFO
