finished registration and login

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,4 @@ jwt.secret = secret
 
 spring.liquibase.change-log=classpath:/db/changelog/changelog-master.xml
 logging.level.liquibase = INFO
+spring.jpa.properties.hibernate.id.new_generator_mappings=false
