Added Action Controller and Action Service.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,16 @@
 #==== connect to mysql ======#
-spring.datasource.url=jdbc:mysql://localhost:3306/test?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username=test
+spring.datasource.url=jdbc:mysql://localhost:3306/knoxdb?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username=root
 spring.datasource.password=abcd1234
 spring.datasource.platform=mysql
- spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
- spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-jwt.secret = secret
-
-
+jwt.secret=secret
+server.port=8020
+logging.level.org.springframework.web.client.RestTemplate=DEBUG
 spring.liquibase.change-log=classpath:/db/changelog/changelog-master.xml
-logging.level.liquibase = INFO
+logging.level.liquibase=INFO
+spring.jpa.properties.hibernate.id.new_generator_mappings=false
+openwhisk.baseurl=https://127.0.0.1:31001/api/v1
