--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,10 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+	        <groupId>org.apache.httpcomponents</groupId>
+	        <artifactId>httpclient</artifactId>
+	    </dependency>
 	</dependencies>
 
 	<build>
