--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,11 @@
 	        <groupId>org.apache.httpcomponents</groupId>
 	        <artifactId>httpclient</artifactId>
 	    </dependency>
+	    <dependency>
+		  <groupId>com.google.guava</groupId>
+		  <artifactId>guava</artifactId>
+		  <version>29.0-jre</version>
+		</dependency>
 	</dependencies>
 
 	<build>
