--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-material-dashboard",
-  "author": "DeviasIO",
-  "email": "contact@devias.io",
+  "name": "Knox-ui",
+  "author": "Subhodip.kumar@gmail.com",
+  "email": "Subhodip.kumar@gmail.com",
   "licence": "MIT",
   "version": "0.3.0",
   "private": false,
