--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,6 +46,7 @@
     "react-ace": "^9.1.1",
     "react-chartjs-2": "^2.7.6",
     "react-dom": "^16.8.6",
+    "react-json-view": "^1.19.1",
     "react-perfect-scrollbar": "^1.5.3",
     "react-pure-lifecycle": "^3.0.0",
     "react-router-dom": "^5.0.1",
